overflow hidden fix scrolling issue of handsonstable

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -136,6 +136,9 @@ label > input:checked + i{ /* (RADIO CHECKED) IMAGE STYLES */
   border:1px solid maroon;
 }
 
+/*#newTable{
+  overflow: hidden;
+}*/
 /*#newTable > div.ht_master.handsontable{
   overflow: hidden;
 }*/
